Disable horizontal overflow on root, not body (fixes sticky)

--- a/docs/assets/fusion.css
+++ b/docs/assets/fusion.css
@@ -6,8 +6,8 @@
 	color-scheme: dark;
 }
 
-body {
-	width: 100vw;
+:root {
+	width: 100%;
 	overflow-x: hidden;
 }
 
